--- a/index.html
+++ b/index.html
@@ -1,12 +1,142 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>my-fourth-repo</title>
+    <title>Assignment-01</title>
+    <link rel="stylesheet" href="css/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap"
+        rel="stylesheet">
 </head>
+
 <body>
-    <h1>my fourth-repo</h1>
+    <section id="banner">
+        <div class="banner-text">
+            <h1>Let's Help Those How Are More In Need </h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti, nisi debitis. Voluptates, quaerat
+                officiis. Laborum accusamus quae nemo maiores quam.</p>
+            <div class="mybtn">
+                <a href="#">Donate Now.</a>
+            </div>
+        </div>
+    </section>
+
+
+    <section id="donate">
+        <div class="donate-text">
+            <h2>Donate Today</h2>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Hic similique odit voluptatem perspiciatis
+                expedita sit obcaecati magni magnam itaque minus.</p>
+            <h3 class="active">100tk</h3>
+            <h3>200tk</h3>
+            <h3>500tk</h3>
+            <h3>1000tk</h3>
+            <h3 class="active">5000tk</h3>
+            <h6>Other Amount (taka).</h6>
+            <div class="line"></div>
+            <div class="mybtn-2">
+                <a href="#">Donate</a>
+            </div>
+        </div>
+
+    </section>
+
+
+    <section id="donate-plan">
+        <div class="donate-plan-text">
+            <h2>Our Donate Plan</h2>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fuga recusandae soluta consectetur est tenetur?
+                Nemo autem non corrupti officiis ducimus!</p>
+        </div>
+        <div class="Food ">
+            <div class="Food-icon">
+                <i> <img src="icon/food.png" alt="food-icon"></i>
+            </div>
+            <div class="food-text">
+                <h2>Food For a Family</h2>
+                <p>Amet minim mollit non deserunt
+                    ullamco est sit aliqua dolor do amet
+                    sint. Velit officia consequat duis enim
+                    velit mollit.</p>
+            </div>
+        </div>
+        <div class="Food" style="background-color:#ffeeee ;">
+            <div class="Food-icon">
+                <i> <img src="icon/shelter.png" alt="food-icon"></i>
+            </div>
+            <div class="food-text">
+                <h2>Shelter for a family</h2>
+                <p>Amet minim mollit non deserunt
+                    ullamco est sit aliqua dolor do amet
+                    sint. Velit officia consequat duis enim
+                    velit mollit.</p>
+            </div>
+        </div>
+        <div class="Food" style="background-color:#fff4d6;">
+            <div class="Food-icon">
+                <i> <img src="icon/Frame-1.png" alt="food-icon"></i>
+            </div>
+            <div class="food-text">
+                <h2>Education for a child</h2>
+                <p>Amet minim mollit non deserunt
+                    ullamco est sit aliqua dolor do amet
+                    sint. Velit officia consequat duis enim
+                    velit mollit.</p>
+            </div>
+        </div>
+
+    </section>
+
+    <section id="immediate needs">
+        <div class="needs-item">
+            <h1>IMMEDIATE NEEDS</h1>
+            <p>The most urgent needs for the affected communities are:</p>
+
+            <ul>
+                <li>Clean drinking water.
+                <li>
+                <li>Cash support to buy basic food staples and meals for children.</li>
+                <li>Hygiene kits: Sanitary napkins, hand soap, buckets, etc.</li>
+                <li>Makeshift shelter, tarpaulins, shelter toolkits.</li>
+                <li>WaSH items.</li>
+                <li>Tube well repairing.</li>
+                <li>Mosquito nets.</li>
+                <li>Animal fodder.</li>
+
+            </ul>
+            <h4>How to Contribute?</h4>
+
+        </div>
+        <div class="donate">
+            <img src="images/donation11.jpg" alt="">
+        </div>
+    </section>
+
+    <section>
+        <div class="update-part">
+            <h2>Get My Updates</h2>
+            <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli 
+                deterruisset. No duo populo animal noluisse, enim</p>
+        </div>
+        <div class="form-field">
+            <form >
+                <h2>Subscribe</h2>
+                <input type="email" placeholder="Email">
+            </form>
+        </div>
+    </section>
+
+
+    <section id="footer">
+        <div class="footer-part">
+            <h2>Be Humble</h2>
+            <p>I’m gonna do it
+            </p>
+        </div>
+
+    </section>
 </body>
+
 </html>
