--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
                 <a href="#">Donate Now.</a>
             </div>
         </div>
+        <div class="banner-1">
+            <img src="images/donation1.jpg" alt="">
+        </div>
     </section>
 
 
